cache stem